# tts_prep_data

./: README.md  exceptions.py  pyproject.toml  run.py  stata.txt  theme.txt  themes.txt  utils.py
commands/: elevenlabs_commands.py  hf_commands.py  neural_commands.py  text_generator_commands.py  text_processor_commands.py  text_to_elevenlabs_audio_cammands.py
datasets/: call_center.jsonl  den4ikai.jsonl  fairy_tales_children.jsonl  golosovoj_assistent.jsonl
entrypoint/: config.py  setup.py
models/: base_llm_client.py  deep_seek_client.py  device.py  dialogue_pair.py  gemini_client.py  llm_provider.py  ollama_client.py  openrouter_client.py  preprocessed_text.py  row.py  voice.py
output/: denchik_dt.tsv
services/: elevenlabs_service.py  llm_client.py  ollama_client.py  text_generator.py  text_generator_ollama.py  text_postprocessing.py  text_preprocessing.py  text_processor_ollama.py  xlsx_reader.py
xlsx_data/: part1.xlsx  part10.xlsx  part11.xlsx  part2.xlsx  part3.xlsx  part4.xlsx  part5.xlsx  part6.xlsx  part7.xlsx  part8.xlsx  part9.xlsx
