[project]
name = "tts-prep-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=1.58.1",
    "ollama>=0.4.8",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "typer>=0.15.3",
]
